S05P13C103-92 design: 방송만들기, 방송페이지, 비디오크기, footer, min-height, max-width, 알림창

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,21 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>홍당무라이브</title>
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" integrity="sha384-tKLJeE1ALTUwtXlaGjJYM3sejfssWdAaWR2s97axw4xkiAdMzQjtOjgcyw0Y50KU" crossorigin="anonymous">
+    <style>
+      footer {
+        width: 100%;
+        height: 10vh;
+        background-color: #f8f9fa;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        flex-direction: column;
+      }
+    </style>
   </head>
   <body>
     <noscript>
@@ -18,7 +29,14 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    
+    <footer>
+      <div>
+        © 2021 광주3팀 서울광주롱디팀
+      </div>
+      <div style="color: #ad4500;">
+        김용재 김창규 이연지 최성은
+      </div>
+    </footer>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
   </body>
